# usbsecurity-dev

./: AUTHORS  Makefile.am  README  README.md  autogen.sh  config.h.in  configure.ac
doc/: Makefile.am
doc/usb-control/: Makefile.am
doc/usb-control/html/: annotated.html  classes.html  common_8c.html  common_8h.html  common_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  struct____authData.html  struct____request.html  usb-control_8c.html  usb-control_8h.html  usb-control_8h_source.html
doc/usb-control/html/search/: all_5f.html  all_64.html  all_66.html  all_69.html  all_75.html  defines_64.html  defines_6c.html  defines_6e.html  files_75.html  functions_67.html  functions_72.html  search.js  variables_61.html  variables_73.html  variables_75.html
doc/usb-control/latex/: annotated.tex  common_8c.tex  doxygen.sty  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  struct____authData.tex  usb-control_8c.tex  usb-control_8h.aux  usb-control_8h.tex
doc/usb-control/man/: Makefile.am
doc/usb-control/man/man3/: Makefile.am  __authData.3  __request.3  common.c.3  common.h.3  usb-control.c.3  usb-control.h.3
doc/usb-gui/: Makefile.am
doc/usb-gui/html/: annotated.html  classes.html  common_8c.html  common_8h.html  common_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  structDEV.html  struct____request.html  usb-gui_8c.html  usb-gui_8h.html  usb-gui_8h_source.html
doc/usb-gui/html/search/: all_61.html  all_63.html  all_64.html  all_66.html  all_6e.html  all_73.html  all_75.html  classes_64.html  defines_65.html  enums_5f.html  enumvalues_61.html  enumvalues_63.html  enumvalues_6e.html  enumvalues_75.html  files_75.html  functions_61.html  functions_64.html  functions_66.html  functions_67.html  functions_6d.html  functions_72.html  functions_75.html  search.js  typedefs_74.html  variables_64.html  variables_66.html  variables_69.html
doc/usb-gui/latex/: annotated.tex  common_8h.tex  doxygen.sty  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structDEV.aux  structDEV.tex  struct____request.tex  usb-gui_8c.tex  usb-gui_8h.aux  usb-gui_8h.tex
doc/usb-gui/man/man3/: DEV.3  Makefile.am  __request.3  common.c.3  common.h.3  usb-gui.c.3  usb-gui.h.3
m4/: ChangeLog  Makefile.am
po/: ChangeLog  LINGUAS~  POTFILES.in  es.gmo  es.po  es.po~  usb-control.pot  usbgui.pot
src/: Makefile.am
src/common/: Makefile.am  common.c~  libusbsecurity.c  libusbsecurity.h  test  test.c
src/conf/: usbsecurity.conf
src/usb-control/: 70-disks-usb.rules.in  Makefile.am  usb-control.c  usb-control.doxyfile  usb-control.h  usbcontrol.1
src/usb-gui/: Makefile.am  gui  sh  usb-control-gtk  usb-control-gtk.desktop  usb-gui.c  usb-gui.doxyfile  usb-gui.h
src/usb-manager/: Makefile.am  storedevice.c  storedevice.h
